@@ -4,7 +4,7 @@ go 1.12
 
 require (
 	code.rocketnine.space/tslocum/cbind v0.1.5
-	github.com/gdamore/tcell/v2 v2.3.11
+	github.com/gdamore/tcell/v2 v2.4.0
 	github.com/lucasb-eyer/go-colorful v1.2.0
 	github.com/mattn/go-runewidth v0.0.13
 	github.com/rivo/uniseg v0.2.0
