@@ -1,5 +1,7 @@
 v1.5.7 (WIP)
+- Add Modal.SetButtonsAlign and Modal.SetTextAlign
 - Fix TextView.GetRegionText error when text contains color tags
+- Do not customize Modal window styling by default (use GetForm and GetFrame to customize)
 
 v1.5.6 (2020-07-08)
 - Add TrueColorTags option and do not use TrueColor tag values by default
